--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/css/styles.css" rel="stylesheet" />
+        <link href="./styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -220,6 +220,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <!-- Core theme JS-->
-        <script src="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/js/scripts.js"></script>
+        <script src="./scripts.js"></script>
     </body>
 </html>
