--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <meta name="description" content="" />
         <meta name="author" content="Yarin Michael Bouzaglo" />
         <title>Aspie</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/assets/img/favicon.ico" />
+           <!-- add icon link -->
+           <link rel = "icon" href = "https://i.ibb.co/WsnYXNV/appstore.jpg"  type = "image/x-icon"> 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -16,49 +16,63 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="./styles.css" rel="stylesheet" />
+        <link href="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/css/styles.css" rel="stylesheet" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">ASPIE <i class="far fa-heart text-primary"></i></a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/Logo/logo.png" height="50" width="40"> <span style='color: #eb8b31'>A</span>
+                    <span style='color: #8dbf22'>s</span>
+                    <span style='color: #f1ba2e'>p</span>
+                    <span style='color: #921e78'>i</span>
+                    <span style='color: #df3d17'>e</span></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Why Us</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Team</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">ABOUT US</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">TEAM</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container h-100">
+        <header class="masthead" style="background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url(https://images.unsplash.com/photo-1529156069898-49953e39b3ac?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1789&q=80); background-position: center;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-size: cover;">
+            <div class="container h-100 ">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <h1 class="text-uppercase text-white font-weight-bold">Aspie</h1>
+                        <img src="assets/Logo/logo.png" height="160" width="125">
+                        <h1 class="text-uppercase text-white font-weight-bold">
+                                <span style='color: #eb8b31'>A</span>
+                                <span style='color: #8dbf22'>s</span>
+                                <span style='color: #f1ba2e'>p</span>
+                                <span style='color: #921e78'>i</span>
+                                <span style='color: #df3d17'>e</span></h1>
                         <hr class="divider my-4" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 font-weight-light mb-5">There is no reason to be alone.</p>
-                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+                        <h2 class="font-weight-bold text-white">Everything falls into place.</h2><br>
+                        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="background-color: #eb8b31;">Find Out More</a>
                     </div>
                 </div>
             </div>
         </header>
         <!-- About-->
-        <section class="page-section bg-primary" id="about">
+        <section class="page-section" id="about" style="background-color: #eb8b31;">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">Your place to find love and friendship</h2>
+                        <h2 class="text-white mt-0">The perfect platform to find love and make friends.</h2>
                         <hr class="divider light my-4" />
-                        <p class="text-white-50 mb-4">We know how complex it is to find love in the 21st century, whether you are an ordinary person or have special needs.<br>
-						After in-depth characterization for the needs of our potential customers,<br> we tried to create for you the ideal experience in this search process.</p>
-                        <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Lets Get Started!</a>
+                        <p style="color: white;">Aspie is a dating and friendship social app for people on the autism spectrum.<br>
+                            We want to create for you an online comfort zone to be yourself.<br>
+                            Making new friends, Share your feelings and find new love.<br></p>
                     </div>
                 </div>
             </div>
@@ -68,24 +82,26 @@
             <div class="container">
                 <h2 class="text-center mt-0">What makes us different?</h2>
                 <hr class="divider my-4" />
+                <p class="text-muted mb-0" style="text-align: center;">Every part of Aspie, from ideation to design to launch,<br>
+                     has been built with the actually Autistic community to make sure that it is representative of our needs.</p>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-							<i class="fas fa-4x fa-users text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-users mb-4" style="color: #ac184b"></i>
                             <h3 class="h4 mb-2">Your Social media</h3>
-                            <p class="text-muted mb-0">Social media tailored specifically for you.</p>
+                            <p class="text-muted mb-0">Social media that suites your needs.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-							<i class="fas fa-4x fa-heart text-primary mb-4"></i>
+							<i class="fas fa-4x fa-heart mb-4" style="color: #8dbf22"></i>
                             <h3 class="h4 mb-2">Speed dating events</h3>
                             <p class="text-muted mb-0">Possibility to organize and take part in multi-participant events.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-globe mb-4"  style="color: #df3d17"></i>
                             <h3 class="h4 mb-2">Blog and online consulting</h3>
                             <p class="text-muted mb-0">Guidance and information by professionals.
 </p>
@@ -93,7 +109,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-							<i class="fas fa-4x fa-shield-alt text-primary mb-4"></i>
+                            <i class="fas fa-4x fa-shield-alt  mb-4" style="color: #f1ba2e"></i>
                             <h3 class="h4 mb-2">Customer security</h3>
                             <p class="text-muted mb-0">Supervision and control against fraud by a third party in order to maintain your security.</p>
                         </div>
@@ -102,10 +118,11 @@
             </div>
         </section>
         <!-- The Team-->
-        <div id="portfolio">
-            <div class="container-fluid p-0">
+        <section>
+        <div id="portfolio" style="background-color: #3777bc;">
+            <div class="container p-0">
 				<div class="col-lg-12 text-center">
-                        <h2 class="text-white mt-0">Meet the team</h2>
+                        <h2 class="text-white mt-0" style="padding-top: 5%;">Meet the team</h2>
                         <hr class="divider light my-4" />
 					<p class="text-white-50 mb-4">We are students studying together for a degree in computer science at the IDC Herzliya,<br> in the characterization process we collaborated with a number of associations dealing with the subject.</p>
 				</div>
@@ -113,16 +130,16 @@
 						<!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/Enav.jpg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
-			  <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
-			  <div class="card-text text-black-50">Chief Executive Officer</div>
-				<hr class="teamhr">
-				<div class="social">
-                <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook"></i></a>	
-                <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <h5 class="card-title mb-0">Enav Sasson</h5>
+                <div class="card-text text-black-50">Chief Marketing Officer</div>
+                  <hr class="teamhr">
+                  <div class="social">
+                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
+                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
+                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -136,10 +153,10 @@
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
 				<hr class="teamhr">
 				<div class="social">
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fab fa-github"></i></a>
-                <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
+                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
+                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -147,16 +164,16 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/Ehud.jpg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
 				<hr class="teamhr">
 				<div class="social">
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fab fa-github"></i></a>
-                <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
+                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
+                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -166,23 +183,22 @@
 		  <div class="card border-0 shadow">
 			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
 			<div class="card-body text-center">
-			  <h5 class="card-title mb-0">Enav Sasson</h5>
-			  <div class="card-text text-black-50">Chief Marketing Officer</div>
+                <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
+			  <div class="card-text text-black-50">Chief Executive Officer</div>
 				<hr class="teamhr">
 				<div class="social">
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-facebook"></i></a>
-                <a href=""><i class="fab fa-github"></i></a>
-                <a href=""><i class="fab fa-linkedin"></i></a>
+                <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
+                <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
+                <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
 		</div>
               </div>
           </div>
-    </div>
-    
-		
+        </div>
+    </section>
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
@@ -209,9 +225,26 @@
                 </div>
             </div>
         </section>
+        <section class="page-section" id="social" style="background-color: #921e78;">
+            <div class="container" style="text-align: center;">
+                <h2 style="color: white;">We
+                    <i class="fas fa-heart"></i>
+                    making new friends!</h2>
+                <hr class="divider light my-4" />
+                <p style="text-align: center; color: rgb(255, 255, 255);">Follow us on the social networks</p>
+            </div>
+            <div class="icon-bar">
+                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a> 
+                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a> 
+                <a href="#" class="google"><i class="fab fa-instagram"></i></a> 
+                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+            </div>
+        </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container"><div class="small text-center text-muted">Copyright © 2020 - Aspie</div></div>
+            <div class="container small text-center text-muted ">
+                <p style="text-align: center;">Copyright © 2020 - Aspie</p>
+                </div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -220,6 +253,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <!-- Core theme JS-->
-        <script src="./scripts.js"></script>
+        <script src="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/js/scripts.js"></script>
     </body>
 </html>
