--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/Enav.jpg" class="card-img-top" alt="...">
+			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
@@ -164,7 +164,7 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/Ehud.jpg" class="card-img-top" alt="...">
+			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
