--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Third party plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/css/styles.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body id="page-top">
@@ -130,7 +130,7 @@
 						<!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/enav.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
@@ -147,7 +147,7 @@
 		<!-- Team Member 2 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/david.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">David German</h5>
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
@@ -164,7 +164,7 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/ehud.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
@@ -181,7 +181,7 @@
 		<!-- Team Member 4 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="https://source.unsplash.com/sNut2MqSmds/500x350" class="card-img-top" alt="...">
+			<img src="assets/team/yarin.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
 			  <div class="card-text text-black-50">Chief Executive Officer</div>
@@ -253,6 +253,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/js/scripts.js"></script>
     </body>
 </html>
