--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/Logo/logo.png" height="50" width="40"> <span style='color: #eb8b31'>A</span>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="assets/assets/Logo/logo.png" height="50" width="40"> <span style='color: #eb8b31'>A</span>
                     <span style='color: #8dbf22'>s</span>
                     <span style='color: #f1ba2e'>p</span>
                     <span style='color: #921e78'>i</span>
@@ -47,7 +47,7 @@
             <div class="container h-100 ">
                 <div class="row h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-10 align-self-end">
-                        <img src="assets/Logo/logo.png" height="160" width="125">
+                        <img src="assets/assets/Logo/logo.png" height="160" width="125">
                         <h1 class="text-uppercase text-white font-weight-bold">
                                 <span style='color: #eb8b31'>A</span>
                                 <span style='color: #8dbf22'>s</span>
@@ -130,7 +130,7 @@
 						<!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/enav.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/enav.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
@@ -147,7 +147,7 @@
 		<!-- Team Member 2 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/david.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/david.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">David German</h5>
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
@@ -164,7 +164,7 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/ehud.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/ehud.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
@@ -181,7 +181,7 @@
 		<!-- Team Member 4 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/team/yarin.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/yarin.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
 			  <div class="card-text text-black-50">Chief Executive Officer</div>
