--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </section>
         <!-- The Team-->
         <section>
-        <div id="portfolio" style="background-color: #3777bc;">
+        <div id="portfolio" style="background-color: #8dbf22;">
             <div class="container p-0">
 				<div class="col-lg-12 text-center">
                         <h2 class="text-white mt-0" style="padding-top: 5%;">Meet the team</h2>
@@ -225,7 +225,7 @@
                 </div>
             </div>
         </section>
-        <section class="page-section" id="social" style="background-color: #921e78;">
+        <section class="page-section" id="social" style="background-color: #4e1f48;">
             <div class="container" style="text-align: center;">
                 <h2 style="color: white;">We
                     <i class="fas fa-heart"></i>
