--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
                 <p style="text-align: center; color: rgb(255, 255, 255);">Follow us on the social networks</p>
             </div>
             <div class="icon-bar">
-                <a href="#" class="facebook"><i class="fab fa-facebook"></i></a> 
-                <a href="#" class="twitter"><i class="fab fa-twitter"></i></a> 
-                <a href="#" class="google"><i class="fab fa-instagram"></i></a> 
-                <a href="#" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/aspieapp" class="facebook"><i class="fab fa-facebook"></i></a> 
+                <a href="https://twitter.com/Aspie63902625" class="twitter"><i class="fab fa-twitter"></i></a> 
+                <a href="https://www.instagram.com/aspie.love/" class="google"><i class="fab fa-instagram"></i></a> 
+                <a href="https://www.linkedin.com/company/aspie-love/" class="linkedin"><i class="fab fa-linkedin"></i></a>
             </div>
         </section>
         <!-- Footer-->
