--- a/index.html
+++ b/index.html
@@ -136,10 +136,8 @@
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
                   <hr class="teamhr">
                   <div class="social">
-                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
-                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
-                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -153,10 +151,8 @@
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
 				<hr class="teamhr">
 				<div class="social">
-                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
-                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
-                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -170,10 +166,8 @@
 			  <div class="card-text text-black-50">Product Manager</div>
 				<hr class="teamhr">
 				<div class="social">
-                    <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
-                    <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
-                    <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                    <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
@@ -187,8 +181,6 @@
 			  <div class="card-text text-black-50">Chief Executive Officer</div>
 				<hr class="teamhr">
 				<div class="social">
-                <a href="https://twitter.com/YBouzaglo" target="_blank"><i class="fab fa-twitter" style="color:  #00aced"></i></a>
-                <a href="https://www.facebook.com/yarin.buzaglo" target="_blank"><i class="fab fa-facebook" style="color: #3b5998"></i></a>	
                 <a href="https://github.com/YarinBou" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
                 <a href="https://www.linkedin.com/in/yarin-bouzaglo/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
@@ -234,10 +226,10 @@
                 <p style="text-align: center; color: rgb(255, 255, 255);">Follow us on the social networks</p>
             </div>
             <div class="icon-bar">
-                <a href="https://www.facebook.com/aspieapp" class="facebook"><i class="fab fa-facebook"></i></a> 
-                <a href="https://twitter.com/Aspie63902625" class="twitter"><i class="fab fa-twitter"></i></a> 
-                <a href="https://www.instagram.com/aspie.love/" class="google"><i class="fab fa-instagram"></i></a> 
-                <a href="https://www.linkedin.com/company/aspie-love/" class="linkedin"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/aspieapp" class="facebook" target="_blank"><i class="fab fa-facebook"></i></a> 
+                <a href="https://twitter.com/Aspie63902625" class="twitter" target="_blank"><i class="fab fa-twitter"></i></a> 
+                <a href="https://www.instagram.com/aspie.love/" class="google" target="_blank"><i class="fab fa-instagram"></i></a> 
+                <a href="https://www.linkedin.com/company/aspie-love/" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a>
             </div>
         </section>
         <!-- Footer-->
