--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
 				<hr class="teamhr">
 				<div class="social">
-                    <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
+                    <a href="https://github.com/GermanDavid" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
+                    <a href="https://www.linkedin.com/in/davidgermann/" target="_blank"><i class="fab fa-linkedin" style="color: #007bb6"></i></a>
               </div>
 			</div>
 		  </div>
