--- a/index.html
+++ b/index.html
@@ -217,15 +217,21 @@
                 </div>
             </div>
         </section>
-        <section class="page-section" id="social" style="background-color: #4e1f48;">
+        <section class="page-section" id="social" style="background-color: #f1ba2e;">
             <div class="container" style="text-align: center;">
                 <h2 style="color: white;">We
                     <i class="fas fa-heart"></i>
                     making new friends!</h2>
                 <hr class="divider light my-4" />
                 <p style="text-align: center; color: rgb(255, 255, 255);">Follow us on the social networks</p>
+                <div  id="content-mobile">
+                    <a href="https://www.facebook.com/aspieapp" target="_blank"><i class="fab fa-3x fa-facebook" style="color: #3b5998"></i></a> 
+                    <a href="https://twitter.com/Aspie63902625"  target="_blank"><i class="fab fa-3x fa-twitter" style="color: #00aced"></i></a> 
+                    <a href="https://www.instagram.com/aspie.love/"  target="_blank"><i class="fab fa-3x fa-instagram" style="color: #517fa4"></i></a> 
+                    <a href="https://www.linkedin.com/company/aspie-love/"  target="_blank"><i class="fab fa-3x fa-linkedin"  style="color: #007bb6"></i></a>
+                </div>
             </div>
-            <div class="icon-bar">
+            <div class="icon-bar" id="content-desktop">
                 <a href="https://www.facebook.com/aspieapp" class="facebook" target="_blank"><i class="fab fa-facebook"></i></a> 
                 <a href="https://twitter.com/Aspie63902625" class="twitter" target="_blank"><i class="fab fa-twitter"></i></a> 
                 <a href="https://www.instagram.com/aspie.love/" class="google" target="_blank"><i class="fab fa-instagram"></i></a> 
