--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">The perfect platform to find love and make friends.</h2>
                         <hr class="divider light my-4" />
-                        <p style="color: white;">Aspie is a dating and friendship social app for people on the autism spectrum.<br>
-                            We want to create for you an online comfort zone to be yourself.<br>
-                            Making new friends, Share your feelings and find new love.<br></p>
+                        <p style="color: white;">Aspie is a dating platform for people on the autism spectrum.<br>
+                            We seek to create an online space to be yourself,<br>
+                            making new friends, sharing your feelings, to find new love.</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <h2 class="text-center mt-0">What makes us different?</h2>
                 <hr class="divider my-4" />
                 <p class="text-muted mb-0" style="text-align: center;">Every part of Aspie, from ideation to design to launch,<br>
-                     has been built with the actually Autistic community to make sure that it is representative of our needs.</p>
+                    has been designed to suit the Autistic community needs.</p>
                 <div class="row">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
@@ -239,7 +239,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="bg-light py-5">
+        <footer class="bg-light py-5" >
             <div class="container small text-center text-muted ">
                 <p style="text-align: center;">Copyright © 2020 - Aspie</p>
                 </div>
