--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="Yarin Michael Bouzaglo" />
         <title>Aspie</title>
-           <!-- add icon link -->
+        <!-- add icon link -->
            <link rel = "icon" href = "https://i.ibb.co/WsnYXNV/appstore.jpg"  type = "image/x-icon"> 
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -31,9 +31,9 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">HOME</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">ABOUT US</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">TEAM</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#home">HOME</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about-us">ABOUT US</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#team">TEAM</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">CONTACT</a></li>
                     </ul>
                 </div>
@@ -63,22 +63,22 @@
                 </div>
             </div>
         </header>
-        <!-- About-->
-        <section class="page-section" id="about" style="background-color: #eb8b31;">
+        <!-- Home-->
+        <section class="page-section" id="home" style="background-color: #eb8b31;">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">The perfect platform to find love and make friends.</h2>
                         <hr class="divider light my-4" />
                         <p style="color: white;">Aspie is a dating platform for people on the autism spectrum.<br>
-                            We seek to create an online space to be yourself,<br>
-                            making new friends, sharing your feelings, to find new love.</p>
+                            We seek to create an online space to make new friends,<br>
+                            share your feelings and to find new love.</p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Why Us-->
-        <section class="page-section" id="services">
+        <!-- about us-->
+        <section class="page-section" id="about-us">
             <div class="container">
                 <h2 class="text-center mt-0">What makes us different?</h2>
                 <hr class="divider my-4" />
@@ -111,7 +111,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-shield-alt  mb-4" style="color: #f1ba2e"></i>
                             <h3 class="h4 mb-2">Customer security</h3>
-                            <p class="text-muted mb-0">Supervision and control against fraud by a third party in order to maintain your security.</p>
+                            <p class="text-muted mb-0">Supervision and control against fraud by a third party to maintain your security.</p>
                         </div>
                     </div>
                 </div>
@@ -119,18 +119,18 @@
         </section>
         <!-- The Team-->
         <section>
-        <div id="portfolio" style="background-color: #8dbf22;">
+        <div id="team" style="background-color: #8dbf22;">
             <div class="container p-0">
 				<div class="col-lg-12 text-center">
                         <h2 class="text-white mt-0" style="padding-top: 5%;">Meet the team</h2>
                         <hr class="divider light my-4" />
-					<p class="text-white-50 mb-4">We are students studying together for a degree in computer science at the IDC Herzliya,<br> in the characterization process we collaborated with a number of associations dealing with the subject.</p>
+					<p class="text-white-50 mb-4">We're Computer Science students on the mission to create a world full of bridges and equality for all.</p>
 				</div>
                 <div class="row no-gutters">
-						<!-- Team Member 1 -->
+        <!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/enav.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
@@ -145,7 +145,7 @@
 		<!-- Team Member 2 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/david.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/david.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">David German</h5>
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
@@ -160,7 +160,7 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/ehud.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
@@ -175,7 +175,7 @@
 		<!-- Team Member 4 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/team/yarin.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
 			  <div class="card-text text-black-50">Chief Executive Officer</div>
@@ -198,9 +198,9 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Let's Get In Touch!</h2>
                         <hr class="divider my-4" />
-						<p class="text-muted mb-5">Want to create a collaboration today?<br>
+						<p class="text-muted mb-5">Interested to collaborate?<br>
 						Do you have any tips for us?<br>
-						Interested in helping provide digital services to this target audience?<br>
+						Interested in helping provide digital services for this community?<br>
 						Contact us today!</p>
                     </div>
                 </div>
@@ -211,8 +211,8 @@
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                        <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
-                        <a class="d-block" href="file:///C|/Users/yarin/Desktop/Web Developer Bootcamp/Aspi-Love proj/Aspie@gmail.com">Aspie@gmail.com</a>
+                        <!-- send email to link-->
+                        <a class="d-block" href="mailto: Aspie@gmail.com">Aspie@gmail.com</a>
                     </div>
                 </div>
             </div>
