--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- Team Member 1 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/team/enav.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
                 <div class="card-text text-black-50">Chief Marketing Officer</div>
@@ -145,7 +145,7 @@
 		<!-- Team Member 2 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/team/david.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/david.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">David German</h5>
 			  <div class="card-text text-black-50">Chief Technology Officer</div>
@@ -160,7 +160,7 @@
 		<!-- Team Member 3 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/team/ehud.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/ehud.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
 			  <h5 class="card-title mb-0">Ehud Barda</h5>
 			  <div class="card-text text-black-50">Product Manager</div>
@@ -175,7 +175,7 @@
 		<!-- Team Member 4 -->
 		<div class="col-xl-3 col-md-6 mb-4">
 		  <div class="card border-0 shadow">
-			<img src="assets/assets/team/yarin.jpeg" class="card-img-top" alt="...">
+			<img src="assets/assets/yarin.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Yarin Michael Bouzaglo</h5>
 			  <div class="card-text text-black-50">Chief Executive Officer</div>
