--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			<img src="assets/assets/enav.jpeg" class="card-img-top" alt="...">
 			<div class="card-body text-center">
                 <h5 class="card-title mb-0">Enav Sasson</h5>
-                <div class="card-text text-black-50">Chief Marketing Officer</div>
+                <div class="card-text text-black-50">Business development</div>
                   <hr class="teamhr">
                   <div class="social">
                     <a href="#" target="_blank"><i class="fab fa-github" style="color: #211F1F"></i></a>
