--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div id="team" style="background-color: #8dbf22;">
             <div class="container p-0">
 				<div class="col-lg-12 text-center">
-                        <h2 class="text-white mt-0" style="padding-top: 5%;">Meet the team</h2>
+                        <h2 class="text-white mt-0" style="padding-top: 5%;">Meet team awesome!</h2>
                         <hr class="divider light my-4" />
 					<p class="text-white-50 mb-4">We're Computer Science students on the mission to create a world full of bridges and equality for all.</p>
 				</div>
